[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "vron"
version = "0.1.7"
description = "High-performance CLI utility suite for computing and security."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "textual>=0.50.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[project.urls]
Homepage = "https://github.com/spixez/dollop"
Repository = "https://github.com/spixez/dollop"

[project.scripts]
vron = "vron:main"

[tool.maturin]
python-source = "python"
module-name = "vron._vron"
